Fix spacing

--- a/src/components/PageTitle/PageTitle.module.css
+++ b/src/components/PageTitle/PageTitle.module.css
@@ -7,7 +7,7 @@
   color: white;
   border-bottom: 2px solid orange;
   text-transform: uppercase;
-  /* margin-bottom: 60px !important; */
+  margin-bottom: 5rem !important;
 }
 
 @media screen and (max-width: 768px) {
